--- a/views/home.hbs
+++ b/views/home.hbs
@@ -30,9 +30,10 @@
   </button>
 </div>
 
-<div class="border rounded my-4 " style="background: #DCDADA;">
-    <h3 class="hola py-3 text-center">¿QUIENES NOS AYUDAN?</h3>
+<div class="container py-5">
+  <h2><span>¿QUIENES NOS AYUDAN?</span></h2>
 </div>
+
 
 <div class="container-fluid text-center mt-5">
     <div class="row mt-5">
@@ -51,21 +52,30 @@
     </div>
 </div>
 
-<div id="quienesSomos" class=" border rounded" style="background: #DCDADA;">
-    <h3 class="py-3 text-center">¿QUIENES SOMOS?</h3>
+<div id="quienesSomos" class="container py-5">
+  <h2><span>¿QUIENES SOMOS?</span></h2>
 </div>
 
-<div class="container-fluid text-center my-5">
+<div class="container text-center my-5">
   <div>
     <h4 class="mb-3">NUESTRA HISTORIA</h4>
     <p style="color:grey">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commododolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo ut labore et dolore magna aliqua. Ut enim ad.
     </p>
 
     <h4 class="my-3 pt-4">NUESTRA MISION</h4>
     <p style="color:grey">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariaturr incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolo.
     </p>
+  </div>
+
+  <div class="container-fluid text-center mt-5">
+    <div class="row mt-5">
+      <div class="row col">
+        <img src="/img/adoption.jpg" class="d-block w-50" alt="...">
+        <img src="/img/adoption2.jpg" class="d-block w-50" alt="...">
+      </div> 
+    </div>
   </div>
 
 </div>
