--- a/views/partials/navbarProfile.hbs
+++ b/views/partials/navbarProfile.hbs
@@ -12,7 +12,7 @@
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <li><a class="dropdown-item" href="/">Inicio</a></li>
           <li><a class="dropdown-item" href="/listaAdopcion">Adóptame</a></li>
-          <li><a class="dropdown-item" href="/profile">Perfil</a></li>
+          <li><a class="dropdown-item" href="/postulation">Publica</a></li>
           <li><hr class="dropdown-divider"></li>
           <li><a id="close-sesion" class="dropdown-item">Cerrar sesion</a></li>
         </ul>
