--- a/views/partials/navbarlistaAdopcion.hbs
+++ b/views/partials/navbarlistaAdopcion.hbs
@@ -4,7 +4,6 @@
       <img src="/img/logo.png" alt="" width="240vw" height="90vw">
    
     <div class="row">
-
       <li class="nav-item dropdown ms-auto mb-4">
         <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
           <img src="/img/Vector.png" alt="" height="30">
@@ -12,10 +11,20 @@
         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <li><a class="dropdown-item" href="/">Inicio</a></li>
           <li><a class="dropdown-item" href="/postulation">Publica</a></li>
-          <li><a class="dropdown-item" href="/login">Cerrar sesion</a></li>
+          <li><a class="dropdown-item" href="/profile">Perfil</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a id="close-sesion" class="dropdown-item">Cerrar sesion</a></li>
         </ul>
       </li>
-     
     </div>
   </div>
 </nav>
+
+<script>
+  const closeSesion = document.getElementById('close-sesion')
+
+  closeSesion.addEventListener('click', () => {
+    localStorage.removeItem('token')
+    window.location.herf = '/login'
+  })
+</script>
