--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,50 +2,88 @@
 
 <div class="container my-5 text-center border rounded bg-light">
     <h3 class="iniciar text-center mt-5">Registrarse</h3>
-    <form class="form text-center">
+    <form id="formId" class="form text-center">
         <div class="row mt-5 mb-4">
             <div class="col text-start">
                 <label>Nombre</label>
-                <input type="text" class="form-control mt-2" placeholder="Ingresa tu nombre" aria-label="Ingresa tus apellidos">
+                <input type="text" name="nombre" class="form-control mt-2" placeholder="Ingresa tu nombre" aria-label="Ingresa tus apellidos">
             </div>
             <div class="col text-start">
                 <label>Apellido</label>
-                <input type="text" class="form-control mt-2" placeholder="Ingrese sus apellidos" aria-label="Last name">
+                <input type="text" name="apellido" class="form-control mt-2" placeholder="Ingrese sus apellidos" aria-label="Last name">
             </div>
         </div>
         <div class="row mb-4">
             <div class="col text-start">
                 <label>Edad</label>
-                <input type="text" class="form-control mt-2" placeholder="Ingresa tu nombre" aria-label="Ingrese su edad">
+                <input type="text" name="edad" class="form-control mt-2" placeholder="Ingresa tu edad" aria-label="Ingrese su edad">
             </div>
             <div class="col text-start">
                 <label>Telefono</label>
-                <input type="text" class="form-control mt-2" placeholder="Ingrese su numero de telefono" aria-label="Telefono">
+                <input type="text" name="telefono" class="form-control mt-2" placeholder="Ingrese su numero de telefono" aria-label="Telefono">
             </div>
         </div>
         <div class="row mb-4">
             <div class="col text-start">
                 <label>Direccion</label>
-                <input type="text" class="form-control mt-2" placeholder="Ingrese su direccion" aria-label="Direccion">
+                <input type="text" name="direccion" class="form-control mt-2" placeholder="Ingrese su direccion" aria-label="Direccion">
             </div>
             <div class="col text-start">
                 <label>Email</label>
-                <input type="text" class="form-control mt-2" placeholder="Ingrese su correo electronico" aria-label="email">
+                <input type="text" name="email" class="form-control mt-2" placeholder="Ingrese su correo electronico" aria-label="email">
             </div>
         </div>
         <div class="row mb-4">
             <div class="col text-start">
                 <label>Contraseña</label>
-                <input type="password" class="form-control mt-2" placeholder="Ingrese una contraseña segura" aria-label="Ingrese su contraseña">
+                <input type="password" name="password" class="form-control mt-2" placeholder="Ingrese una contraseña segura" aria-label="Ingrese su contraseña">
             </div>
             <div class="col text-start">
                 <label>Repita su contraseña</label>
-                <input type="password" class="form-control mt-2" placeholder="Confirme su contraseña" aria-label="Confirmar contraseña">
+                <input type="password" name="password_confirm" class="form-control mt-2" placeholder="Confirme su contraseña" aria-label="Confirmar contraseña">
             </div>
         </div>
         
-        <button class="btn btn-success my-3">Registrar</button>
+        <button style="color: white; background: #098B94" class="btn btn-success my-3">Registrar</button>
         <p>¿Ya tienes una cuenta? <a href="/login">Iniciar Sesion</a></p>
     </form>
 </div>
 
+<script>
+    const form = document.getElementById('formId')
+
+    form.addEventListener('submit', async(e) => {
+        e.preventDefault()
+
+        const formData = new FormData(form)
+
+        if(form.password || form.password_confirm) {
+            if(event.target.password.value !== event.target.password_confirm.value) {
+                event.preventDefault()
+                return alert(
+                    'Las contraseñas no coinciden'
+                )
+            }
+        }
+
+        try {
+            const response = await fetch('/api/v1/users', {
+                method: 'post',
+                body: formData
+            })
+            console.log(response)
+
+            const data = await response.json()
+
+            if(!data.ok) {
+                return alert(data.msg)
+            }
+
+            localStorage.setItem('token', data.token)
+            window.location.href = "/login"
+
+        } catch(error) {
+            console.log(error)
+        }
+    })
+</script>
