--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-{{> navbarLoguedoff}}
+{{> navbarLogout}}
 
 <div class="container my-5 pb-5 border rounded bg-light">
   <h3 class="iniciar text-center mt-4 pt-5">Iniciar Sesion</h3>
