--- a/views/partials/navbarlistaAdopcion.hbs
+++ b/views/partials/navbarlistaAdopcion.hbs
@@ -25,6 +25,6 @@
 
   closeSesion.addEventListener('click', () => {
     localStorage.removeItem('token')
-    window.location.herf = '/login'
+    window.location.href = '/login'
   })
 </script>
