--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,4 +1,4 @@
-{{> navbarLoguedoff}}
+{{> navbarLogout}}
 
 <div class="container my-5 text-center border rounded bg-light">
     <h3 class="iniciar text-center mt-5">Registrarse</h3>
