--- a/views/listaAdopcion.hbs
+++ b/views/listaAdopcion.hbs
@@ -1,128 +1,69 @@
 {{> navbarlistaAdopcion}}
 
+<div id="alert"></div>
+
 <div class="container my-5">
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col mb-5">
-    <h5 class="card-title">Luna</h5>
-    <div class="card h-100 bg-light">
-      <img src="/img/adopta1.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="text-center mb-4 mt-2">
-        <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
-        </div>
-        <p>Sexo: Hembra</p>
-        <p>Edad: 6 años</p>
-        <p>Tamaño: Mediano</p>
-        <p class="card-text">Descripcion:</p>
-        <p style="color: gray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <p><img src="/img/heart-solid 15.png" alt=""> 1</p>
-      </div>
-    </div>
+  <div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
+
   </div>
-  <div class="col mb-5">
-    <h5 class="card-title">Rold</h5>
-    <div class="card h-100 bg-light">
-      <img src="/img/adopta2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="text-center mb-4 mt-2">
-        <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
-        </div>
-        <p>Sexo: Macho</p>
-        <p>Edad: 8 años</p>
-        <p>Tamaño: Grande</p>
-        <p class="card-text">Descripcion:</p>
-        <p style="color: gray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <p><img src="/img/heart-solid 15.png" alt=""> 4</p>
-      </div>
-    </div>
-  </div>
-  <div class="col mb-5">
-    <h5 class="card-title">Bora</h5>
-    <div class="card h-100 bg-light">
-      <img src="/img/adopta3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="text-center mb-4 mt-2">
-        <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
-        </div>
-        <p>Sexo: Hembra</p>
-        <p>Edad: 4 años</p>
-        <p>Tamaño: Pequeña</p>
-        <p class="card-text">Descripcion:</p>
-        <p style="color: gray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <p><img src="/img/heart-solid 15.png" alt=""> 1</p>
-      </div>
-    </div>
-  </div>
-  <div class="col mb-5">
-    <h5 class="card-title">Gasper</h5>
-    <div class="card h-100 bg-light">
-      <img src="/img/adopta4.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="text-center mb-4 mt-2">
-        <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
-        </div>
-       <p>Sexo: Macho</p>
-        <p>Edad: 6 meses</p>
-        <p>Tamaño: Pequeño</p>
-        <p class="card-text">Descripcion:</p>
-        <p style="color: gray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <p><img src="/img/heart-solid 15.png" alt=""> 5</p>
-      </div>
-    </div>
-  </div>
-  <div class="col mb-5">
-    <h5 class="card-title">Ralph</h5>
-    <div class="card h-100 bg-light">
-      <img src="/img/adopta5.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="text-center mb-4 mt-2">
-        <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
-        </div>
-        <p>Sexo: Macho</p>
-        <p>Edad: 3 años</p>
-        <p>Tamaño: Mediano</p>
-        <p class="card-text">Descripcion:</p>
-        <p style="color: gray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <p><img src="/img/heart-solid 15.png" alt=""> 2</p>
-      </div>
-    </div>
-  </div>
-  <div class="col mb-5">
-    <h5 class="card-title">Tala</h5>
-    <div class="card h-100 bg-light">
-      <img src="/img/adopta6.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <div class="text-center mb-4 mt-2">
-        <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
-        </div>
-        <p>Sexo: Hembra</p>
-        <p>Edad: 2 años</p>
-        <p>Tamaño: Mediano</p>
-        <p class="card-text">Descripcion:</p>
-        <p style="color: gray;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-      <div class="card-footer">
-        <p><img src="/img/heart-solid 15.png" alt=""> 1</p>
-      </div>
-    </div>
-  </div>
-</div>
 </div>
 
 <script>
+  const alertContainer = document.getElementById('alert')
+  const cards = document.getElementById('cards')
+  const pintarDatos = (animals) => {
+    cards.innerHTML = ''
+    animals.forEach(a => {
+      cards.innerHTML += `
+        <div class="col mb-5">
+          <h5 class="card-title">${a.nombre_animal}</h5>
+          <div class="card h-100 bg-light">
+            <img src="/avatars/${a.foto}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="text-center mb-4 mt-2">
+              <a href="#" style="color: white; background: #098B94" class="btn btn-primary"><img src="/img/heart-solid 15.png" alt=""> Adóptame!</a>
+              </div>
+              <p>Sexo: ${a.genero_animal}</p>
+              <p>Edad: ${a.edad_animal}</p>
+              <p>Tamaño: ${a.tamano}</p>
+              <p class="card-text">Descripcion:</p>
+              <p style="color: gray;">${a.descripcion}</p>
+            </div>
+            <div class="card-footer">
+              <p><img src="/img/heart-solid 15.png" alt=""> 1</p>
+            </div>
+          </div>
+        </div>
+      `
+    })
+  }
+
   document.addEventListener('DOMContentLoaded', async() => {
     if(!localStorage.getItem('token')) {
       window.location.href = '/login'
+    }
+
+    const token = localStorage.getItem('token')
+
+    try {
+      const response = await fetch('api/v1/animals', {
+        method: 'get',
+        headers: {
+          Authorization: `Bearer ${localStorage.getItem('token')}`
+        }
+      })
+
+      const data = await response.json()
+
+      if(!data.ok) {
+        window.location.href = "/login"
+      }
+
+      pintarDatos(data.animals)
+
+    } catch(error) {
+      localStorage.removeItem('token')
+      window.location.href = "/login"
     }
   })  
 </script>
