--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -6,41 +6,31 @@
         <div class="row mt-5 mb-4">
             <div class="col text-start">
                 <label>Nombre</label>
-                <input id="name" type="text" name="nombre" class="form-control mt-2" placeholder="Ingresa tu nombre" aria-label="Ingresa tus apellidos">
+                <input id="name" type="text" name="nombre" class="form-control mt-2" aria-label="Ingresa tus apellidos">
             </div>
             <div class="col text-start">
                 <label>Apellido</label>
-                <input id="lastname" type="text" name="apellido" class="form-control mt-2" placeholder="Ingrese sus apellidos" aria-label="Last name">
+                <input id="lastname" type="text" name="apellido" class="form-control mt-2" aria-label="Last name">
             </div>
         </div>
         <div class="row mb-4">
             <div class="col text-start">
                 <label>Edad</label>
-                <input id="age" type="text" name="edad" class="form-control mt-2" placeholder="Ingresa tu edad" aria-label="Ingrese su edad">
+                <input id="age" type="text" name="edad" class="form-control mt-2" aria-label="Ingrese su edad">
             </div>
             <div class="col text-start">
                 <label>Telefono</label>
-                <input id="phone" type="text" name="telefono" class="form-control mt-2" placeholder="Ingrese su numero de telefono" aria-label="Telefono">
+                <input id="phone" type="text" name="telefono" class="form-control mt-2" aria-label="Telefono">
             </div>
         </div>
         <div class="row mb-4">
             <div class="col text-start">
                 <label>Direccion</label>
-                <input id="adress" type="text" name="direccion" class="form-control mt-2" placeholder="Ingrese su direccion" aria-label="Direccion">
+                <input id="adress" type="text" name="direccion" class="form-control mt-2" aria-label="Direccion">
             </div>
             <div class="col text-start">
                 <label>Email</label>
-                <input id="email" type="text" name="email" class="form-control mt-2" placeholder="Ingrese su correo electronico" aria-label="email">
-            </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col text-start">
-                <label>Contraseña</label>
-                <input id="password" type="password" name="password" class="form-control mt-2" placeholder="Ingrese una contraseña segura" aria-label="Ingrese su contraseña">
-            </div>
-            <div class="col text-start">
-                <label>Repita su contraseña</label>
-                <input id="repeat-password" type="password" name="password_confirm" class="form-control mt-2" placeholder="Confirme su contraseña" aria-label="Confirmar contraseña">
+                <input id="email" type="text" readonly="readonly" name="email" class="form-control mt-2" aria-label="email">
             </div>
         </div>
         
@@ -50,14 +40,62 @@
 </div>
 
 <script>
+    let myId = 0
+
     document.addEventListener('DOMContentLoaded', async() => {
         if(!localStorage.getItem('token')) {
             window.location.href = "/login"
         }
 
         const token = localStorage.getItem('token')
+
+        try {
+            const response = await fetch('api/v1/user', {
+                method: 'get',
+                headers: {
+                    Authorization: `Bearer ${localStorage.getItem('token')}`
+                }
+            })
+
+            const data = await response.json()
+
+            myId = data.user.id
+            document.getElementById('name').value = data.user.nombre
+            document.getElementById('lastname').value = data.user.apellido
+            document.getElementById('age').value = data.user.edad
+            document.getElementById('phone').value = data.user.telefono
+            document.getElementById('adress').value = data.user.direccion
+            document.getElementById('email').value = data.user.email
+
+        } catch(error) {
+           localStorage.removeItem('token')
+           window.location.href = "/login"
+        }
     })
 
-    
+    const formEdit = document.getElementById('formId')
+
+    formEdit.addEventListener('submit', async(e) => {
+        e.preventDefault()
+
+        const formData = new FormData(formEdit)
+
+        try {
+            const response = await fetch(`/api/v1/user/${myId}`, {
+                method: 'put',
+                body: formData
+            })
+
+            if(!response.ok) {
+                alert('Ha un ocurrido un problema')
+            } else {
+                alert('El usuario ha sido editado con éxito')
+            }
+
+        } catch(error) {
+            console.log(error)
+        }
+        
+    })
      
 </script>
