--- a/views/partials/navbarHome.hbs
+++ b/views/partials/navbarHome.hbs
@@ -1,16 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
     <a class="navbar-brand" href="">
-      <img src="/img/logo.png" alt="" width="240vw" height="90vw">
+      <img src="/img/logo.png" alt="" href="/" width="240vw" height="90vw">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" style="color: white;">Inicio</a>
-        </li>
         <li class="nav-item">
           <a class="nav-link" href="#quienesSomos" style="color: white;">¿Quienes Somos?</a>
         </li>
@@ -24,14 +21,8 @@
           </ul>
         </li>
       </ul>
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link2" href="/login">Iniciar Sesion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link2" href="/register">Registrarse</a>
-        </li>
-      </ul>
+      
     </div>
   </div>
 </nav>
+
